# python-project-83

./: .gitignore  Makefile  README.md  build.sh  pyproject.toml
.github/workflows/: puci.yml  pyci.yml
page_analyzer/: app.py  db.py  db_init.py
page_analyzer/templates/: base.html  index.html
page_analyzer/templates/errors/: 404.html
page_analyzer/templates/urls/: index.html  show.html
static/css/: styles.css
